post_analysis + readme changes

--- a/notebooks/prepare_data.ipynb
+++ b/notebooks/prepare_data.ipynb
@@ -983,7 +983,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "total = train.isnull().sum().sort_values(ascending=False)\n",
+    "percent = total/(len(train))\n",
+    "missing_data = pd.concat([total,percent],axis =1, keys = ['total', 'percent'])\n",
+    "missing_data.head(20)"
+   ]
   }
  ],
  "metadata": {
